--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,52 @@ dependencies:
 
   cupertino_icons: ^0.1.3
 
+  ##################
+  # OWN
+  #################
+
   #BSD
   dart_jts: ^0.0.5+2
-#    git:
-#      url: https://github.com/moovida/dart_jts.git
+  #    git:
+  #      url: https://github.com/moovida/dart_jts.git
 
   # apache 2
   flutter_geopackage: ^0.1.2
-#    git:
-#      url: https://github.com/moovida/flutter_geopackage.git
+  #    git:
+  #      url: https://github.com/moovida/flutter_geopackage.git
 
   dart_hydrologis_utils: ^0.1.0
+
+  ####################
+  # OTHERS
+  ####################
+  # MIT
+  material_design_icons_flutter: ^4.0.5145
+  # MIT
+  provider: ^4.1.1
+  # MIT
+  share_extend: ^1.1.2
+    # BSD
+  path_provider: ^1.6.5
+  # MIT
+  path_provider_ex: ^1.0.1
+    # MIT
+  proj4dart: 1.0.4
+    # MIT
+  dio: ^3.0.9
+    # MIT
+  permission_handler: ^4.4.0+hotfix.2
+  # BSD
+  device_info: ^0.4.2+1
+    # MIT
+  logger: ^0.8.3
+
+  # BSD
+  shared_preferences: ^0.5.6+3
+  # MIT
+  screen: 0.0.5
+  # ON ANDROID NEEDS:
+  # <uses-permission android:name="android.permission.WAKE_LOCK" />
 
   #BSD
   image_picker: ^0.6.4
@@ -37,16 +72,13 @@ dependencies:
   #  <key>NSMicrophoneUsageDescription</key>
   #  <string>The app needs to use the camera to take vocal notes during the field mapping activity.</string>
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
