--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,16 +24,14 @@ dependencies:
   #    git:
   #      url: https://github.com/moovida/dart_jts.git
 
-  # apache 2
-  flutter_geopackage: ^0.1.2
-  #    git:
-  #      url: https://github.com/moovida/flutter_geopackage.git
 
   dart_hydrologis_utils: ^0.1.0
 
   ####################
   # OTHERS
   ####################
+  # MIT
+  sqflite: ^1.3.0
   # MIT
   material_design_icons_flutter: ^4.0.5145
   # MIT
