--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,35 +20,39 @@ dependencies:
   #################
 
   #BSD
-  dart_jts: ^0.0.5+2
+  # dart_jts: ^0.0.5+2
   #    git:
   #      url: https://github.com/moovida/dart_jts.git
 
-
-  dart_hydrologis_utils: ^0.1.0
+  # dart_hydrologis_utils: ^0.3.0
+  dart_shp: ^0.2.0
 
   ####################
   # OTHERS
   ####################
+  # BSD
+  charset_converter: ^1.0.3
+  # BSD
+  characters: ^0.5.0
   # MIT
   sqflite: ^1.3.0
   # MIT
   material_design_icons_flutter: ^4.0.5145
   # MIT
   share_extend: ^1.1.2
-    # BSD
+  # BSD
   path_provider: ^1.6.5
   # MIT
   path_provider_ex: ^1.0.1
-    # MIT
-  proj4dart: 1.0.4
-    # MIT
+  # MIT
+  proj4dart: ^1.0.4
+  # MIT
   dio: ^3.0.9
-    # MIT
+  # MIT
   permission_handler: ^4.4.0+hotfix.2
   # BSD
   device_info: ^0.4.2+1
-    # MIT
+  # MIT
   logger: ^0.8.3
 
   # BSD
