--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,7 @@ dependencies:
   #    git:
   #      url: https://github.com/moovida/dart_jts.git
 
-  # dart_hydrologis_utils: ^0.3.0
-  dart_shp: ^0.2.0
+  dart_hydrologis_utils: ^0.3.0
 
   ####################
   # OTHERS
