--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,15 @@ dependencies:
   logger: ^0.8.3
 
   # BSD
+  url_launcher: ^5.4.2
+  
+  # MIT
+  flutter_tags: ^0.4.8
+
+  # MIT
+  flutter_datetime_picker: ^1.3.8
+
+  # BSD
   shared_preferences: ^0.5.6+3
   # MIT
   screen: 0.0.5
