--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   # BSD
   characters: ^0.5.0
   # MIT
-  sqflite: ^1.3.0
+  moor_ffi: ^0.6.0
   # MIT
   material_design_icons_flutter: ^4.0.5145
   # MIT
