--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   #      url: https://github.com/moovida/dart_jts.git
 
   dart_hydrologis_utils: ^0.4.0
+  
+  dart_hydrologis_db:
+    path: ../dart_hydrologis_db/
 
   ####################
   # OTHERS
@@ -31,8 +34,6 @@ dependencies:
   charset_converter: ^1.0.3
   # BSD
   characters: ^0.5.0
-  # MIT
-  moor_ffi: ^0.6.0
   # MIT
   material_design_icons_flutter: ^4.0.5145
   # MIT
