--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   #    git:
   #      url: https://github.com/moovida/dart_jts.git
 
-  dart_hydrologis_utils: ^0.4.0
+  dart_hydrologis_utils: #^0.4.0
+    path: ../dart_hydrologis_utils/
   
   dart_hydrologis_db:
     path: ../dart_hydrologis_db/
