--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,15 @@ dependencies:
   #################
 
   #BSD
-  dart_jts: ^0.0.5+2
+  dart_jts: ^0.0.5+4
   #    git:
   #      url: https://github.com/moovida/dart_jts.git
 
-  dart_hydrologis_utils: #^0.4.0
-    path: ../dart_hydrologis_utils/
+  dart_hydrologis_utils: ^0.4.1
+    # path: ../dart_hydrologis_utils/
   
-  dart_hydrologis_db:
-    path: ../dart_hydrologis_db/
+  dart_hydrologis_db: ^0.1.0
+    # path: ../dart_hydrologis_db/
 
   ####################
   # OTHERS
