--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
   dart_hydrologis_utils: ^0.4.1
     # path: ../dart_hydrologis_utils/
   
-  dart_hydrologis_db: ^0.1.0
+  dart_hydrologis_db: #^0.1.0
     # path: ../dart_hydrologis_db/
+    git:
+     url: https://github.com/moovida/dart_hydrologis_db.git
 
   ####################
   # OTHERS
