--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ dependencies:
   flutter_tags: ^0.4.8
 
   # MIT
-  flutter_datetime_picker: ^1.3.8
+  flutter_datetime_picker: #^1.3.8
+   git:
+    url: https://github.com/moovida/flutter_datetime_picker.git
 
   # BSD
   shared_preferences: ^0.5.6+3
