--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
 
   dart_hydrologis_utils: ^0.4.1
     # path: ../dart_hydrologis_utils/
-  
+
   ####################
   # OTHERS
   ####################
@@ -45,18 +45,21 @@ dependencies:
   # MIT
   permission_handler: ^4.4.0+hotfix.2
   # BSD
-  device_info: ^0.4.2+1
+  device_info:
+    ^0.4.2+1
+  # MIT
+  after_layout: ^1.0.7+2
 
   # BSD
   url_launcher: ^5.4.2
-  
+
   # MIT
   flutter_tags: ^0.4.8
 
   # MIT
   flutter_datetime_picker: #^1.3.8
-   git:
-    url: https://github.com/moovida/flutter_datetime_picker.git
+    git:
+      url: https://github.com/moovida/flutter_datetime_picker.git
 
   # BSD
   shared_preferences: ^0.5.6+3
