--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   # MIT
   dio: ^3.0.9
   # MIT
-  permission_handler: ^4.4.0+hotfix.2
+  permission_handler: ^5.0.1+1
+
   # BSD
   device_info: ^0.4.2+1
   # MIT
