--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   # MIT
   dio: ^4.0.0
   # MIT
-  permission_handler: ^5.1.0
+  permission_handler: ^8.1.0
     # git: 
     #   url: https://github.com/Baseflow/flutter-permission-handler.git
     #   path: permission_handler
@@ -55,16 +55,16 @@ dependencies:
   after_layout: ^1.0.7+2
 
   # BSD
-  url_launcher: ^5.4.2
+  url_launcher: ^6.0.6
 
   # MIT
   flutter_tags: ^0.4.8
 
   # MIT
-  flutter_material_pickers: #^1.9.2
-    git:
-      url: https://github.com/moovida/flutter_material_pickers.git
-      ref: 74bf310
+  flutter_material_pickers: 3.0.0
+    # git:
+    #   url: https://github.com/moovida/flutter_material_pickers.git
+    #   ref: 74bf310
 
   # BSD
   shared_preferences: ^0.5.6+3
@@ -74,7 +74,7 @@ dependencies:
   # <uses-permission android:name="android.permission.WAKE_LOCK" />
 
   #BSD
-  image_picker: ^0.6.4
+  image_picker: ^0.8.0+3
   # ON IOS NEEDS:
   #  <key>NSPhotoLibraryUsageDescription</key>
   #  <string>The app needs to access the photo library to attach media to the survey.</string>
