--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ publish_to: none
 environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=2.0.0"
+  
 
 dependencies:
   flutter:
@@ -103,6 +104,9 @@ dependencies:
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.20.1
+
+  flutter_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
