--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,41 @@ dependencies:
   # git:
   #  url: https://github.com/moovida/dart_hydrologis_db.git
 
+ ##################################
+  # OTHERS MAPS RELATED
+  ##################################
+  # MIT
+  # this also pulls flutter_map_dragmarker
+  flutter_map_line_editor: ^4.1.0
+
+  # BSD
+  flutter_map: ^4.0.0
+
+  flutter_map_marker_cluster: ^1.1.1
+
+  # GPL 3.0 -> not maintained anymore
+  map_elevation: #^2.0.0
+    git:
+      url: https://github.com/moovida/map_elevation.git
+      ref: flutter_map_4_compat
+
+  # MIT
+  lat_lon_grid_plugin: ^0.2.6
+    # git:
+    #   url: https://github.com/moovida/lat_lon_grid_plugin.git
+    #   ref: bump_flutter_map_to_1
+
+  mapsforge_flutter: #^2.0.1
+    # path: /home/hydrologis/development/SMASH/mapsforge_flutter_moovida/mapsforge_flutter
+    git:
+    #   url: https://github.com/mikes222/mapsforge_flutter.git
+      url: https://github.com/moovida/mapsforge_flutter.git
+      path: mapsforge_flutter
+      ref: smash_compats
+
+  # apache
+  latlong2: ^0.8.1
+
   ####################
   # OTHERS
   ####################
