--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,14 @@ dependencies:
   # apache
   latlong2: ^0.8.1
 
+  xml: ^6.1.0 #'>=4.5.1 <=5.3.1'
+
+  # Apache 2.0
+  gpx: ^2.1.0
+
+  # BSD  rainbow_vis: 1.0.3
+  rainbow_color: 2.0.1
+
   ####################
   # OTHERS
   ####################
