added tiff and fixed some support + localization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   # git:
   #  url: https://github.com/moovida/dart_hydrologis_db.git
 
+  # apache 2
+  geoimage: ^0.2.0
+  
  ##################################
   # OTHERS MAPS RELATED
   ##################################
@@ -50,12 +53,6 @@ dependencies:
   flutter_map: ^4.0.0
 
   flutter_map_marker_cluster: ^1.1.1
-
-  # GPL 3.0 -> not maintained anymore
-  map_elevation: #^2.0.0
-    git:
-      url: https://github.com/moovida/map_elevation.git
-      ref: flutter_map_4_compat
 
   # MIT
   lat_lon_grid_plugin: ^0.2.6
