--- a/example/smashlibs_mapexample/pubspec.yaml
+++ b/example/smashlibs_mapexample/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     # - assets/smash_text.png
     - assets/assisi.map
     - assets/ciclabile_peschiera_mantova.gpx
+    - assets/testtiff.tif
     - assets/defaultrender.xml
     - packages/mapsforge_flutter/assets/patterns/coniferous.svg
     - packages/mapsforge_flutter/assets/patterns/coniferous_and_deciduous.svg
