--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,18 @@ dependencies:
 
   # apache 2
   geoimage: ^0.2.0
+
+  # apache 2
+  flutter_geopackage: ^0.6.1
+  # path: ../flutter_geopackage/
+  #  git:
+  #    url: https://github.com/moovida/flutter_geopackage.git
+  
+  dart_postgis: ^0.3.1
+  # path: /home/hydrologis/development/SMASH/dart_postgis/
+  # git:
+  #   url: https://github.com/moovida/dart_postgis
+  
   
  ##################################
   # OTHERS MAPS RELATED
