--- a/example/smashlibs_mapexample/pubspec.yaml
+++ b/example/smashlibs_mapexample/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/ciclabile_peschiera_mantova.gpx
     - assets/testtiff.tif
     - assets/world.mbtiles
+    - assets/orthos.gpkg
     - assets/defaultrender.xml
     - packages/mapsforge_flutter/assets/patterns/coniferous.svg
     - packages/mapsforge_flutter/assets/patterns/coniferous_and_deciduous.svg
