--- a/example/smashlibs_mapexample/pubspec.yaml
+++ b/example/smashlibs_mapexample/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/testtiff.tif
     - assets/world.mbtiles
     - assets/orthos.gpkg
+    - assets/vectors.gpkg
     - assets/defaultrender.xml
     - packages/mapsforge_flutter/assets/patterns/coniferous.svg
     - packages/mapsforge_flutter/assets/patterns/coniferous_and_deciduous.svg
