--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,9 @@ dependencies:
   # Apache 2.0
   gpx: ^2.1.0
 
+  # MIT
+  geojson_vi: ^2.1.0
+
   # BSD  rainbow_vis: 1.0.3
   rainbow_color: 2.0.1
 
