--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter
-  intl: '>=0.16.1 <=0.18.0'
+  intl: '>=0.16.1'
 
   ##################
   # OWN
