--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -174,6 +174,10 @@ dependencies:
   # MIT
   flutter_slidable: ^3.0.1
 
+  # Apache 2
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.20.1
