--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ dependencies:
   flutter_map_marker_cluster: ^1.3.1
 
   # MIT
-  lat_lon_grid_plugin: ^0.2.6
+  # lat_lon_grid_plugin: ^0.2.6
     # git:
     #   url: https://github.com/moovida/lat_lon_grid_plugin.git
     #   ref: bump_flutter_map_to_1
