--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -182,6 +182,10 @@ dependencies:
   hive: ^4.0.0-dev.2
   isar_flutter_libs: ^4.0.0-dev.13
 
+
+  # MIT
+  flutter_ringtone_player: ^4.0.0+3
+
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.20.1
