--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -155,7 +155,8 @@ dependencies:
   # <uses-permission android:name="android.permission.WAKE_LOCK" />
 
   #BSD
-  image_picker: ^0.8.7+5
+  # image_picker: ^1.1.2
+  camera: ^0.11.0+2
   # ON IOS NEEDS:
   #  <key>NSPhotoLibraryUsageDescription</key>
   #  <string>The app needs to access the photo library to attach media to the survey.</string>
