--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -155,7 +155,7 @@ dependencies:
   # <uses-permission android:name="android.permission.WAKE_LOCK" />
 
   #BSD
-  # image_picker: ^1.1.2
+  image_picker: ^1.1.2
   camera: ^0.11.0+2
   # ON IOS NEEDS:
   #  <key>NSPhotoLibraryUsageDescription</key>
