--- a/.github/workflows/smashlibs-tests.yml
+++ b/.github/workflows/smashlibs-tests.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: stable
           cache: true
 
       # Verify Flutter installation
