--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
       url: https://github.com/mikes222/mapsforge_flutter.git
       # url: https://github.com/moovida/mapsforge_flutter.git
       path: mapsforge_flutter
+      ref: 86e83b761682c5982bd86f1406722beec2dadd73
       # ref: smash_compats
 
   # apache
