add cancellable tile provider + start web example to fix regressions

--- a/example/smashlibs_mapexample/pubspec.yaml
+++ b/example/smashlibs_mapexample/pubspec.yaml
@@ -1,5 +1,5 @@
 name: smashlibs_mapexample
-description: A new Flutter project.
+description: A libs example for mobile and desktop.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
