adding the concept of highligh geometry to be able to activate it from teh mapview

--- a/example/smashlibs_webexample/pubspec.yaml
+++ b/example/smashlibs_webexample/pubspec.yaml
@@ -66,7 +66,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # assets:
+  assets:
+    - assets/smash_icon.png
     # - assets/fonts/OpenSans-Regular.ttf
     # - assets/fonts/OpenSans-Bold.ttf
     # - assets/fonts/OpenSans-Italic.ttf
