--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   #################
 
   #BSD
-  dart_jts: ^0.2.3
+  dart_jts: ^0.3.0+1
     # path: ../dart_jts/
   #    git:
   #      url: https://github.com/moovida/dart_jts.git
@@ -43,12 +43,12 @@ dependencies:
   geoimage: ^0.4.0
 
   # apache 2
-  flutter_geopackage: ^0.6.2
+  flutter_geopackage: ^0.6.4+3
   # path: ../flutter_geopackage/
   #  git:
   #    url: https://github.com/moovida/flutter_geopackage.git
   
-  dart_postgis: ^0.3.2
+  dart_postgis: ^0.3.3+4
   # path: /home/hydrologis/development/SMASH/dart_postgis/
   # git:
   #   url: https://github.com/moovida/dart_postgis
