--- a/example/smashlibs_mapexample/pubspec.yaml
+++ b/example/smashlibs_mapexample/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   # MIT
   sqlite3_flutter_libs: ^0.5.9
 
-
+dependency_overrides:
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
